[package]
name = "queued-example-client"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3"
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"
