[package]
name = "queued-example-client"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
itertools = "0.10.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"
