[package]
name = "libqueued"
description = "Library for queued"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/queued"
keywords = ["queue", "message", "fifo"]
categories = ["database-implementations", "web-programming"]
repository = "https://github.com/wilsonzlin/queued.git"
version = "0.5.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
blake3 = "1.3"
chrono = { version = "0.4", features = ["serde"] }
croaring = "0.7"
dashmap = "5.4"
futures = "0.3"
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4"
log-structured = "0.1.4"
num_enum = "0.5"
off64 = "0.6.0"
rand = "0.8"
seekable-async-file = "0.11.2"
serde = { version = "1.0.164", features = ["derive"] }
signal-future = "0.1.1"
tinybuf = { version = "0.3.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
write-journal = "0.10.3"
