[package]
name = "libqueued"
description = "Library for queued"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/queued"
keywords = ["queue", "message", "fifo"]
categories = ["database-implementations", "web-programming"]
repository = "https://github.com/wilsonzlin/queued.git"
version = "0.7.3"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["io_mmap"]
io_file = ["log-structured/io_file", "seekable-async-file/tokio_file", "write-journal/io_file"]
io_mmap = ["log-structured/io_mmap", "seekable-async-file/mmap", "write-journal/io_mmap"]

[dependencies]
async-trait = "0.1"
blake3 = "1.3"
chrono = { version = "0.4", features = ["serde"] }
croaring = "0.8.1"
dashmap = "5.4"
futures = "0.3"
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4"
log-structured = { version = "0.3.0", default-features = false }
num_enum = "0.5"
off64 = "0.6.0"
parking_lot = "0.12.1"
rand = "0.8"
seekable-async-file = { version = "0.11.3", default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
signal-future = "0.1.1"
tinybuf = { version = "0.3.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
write-journal = { version = "0.11.1", default-features = false }
