[tool.poetry]
name = "queued-client-py"
version = "0.1.3"
description = "Python client for queued"
authors = ["Wilson Lin <code@wilsonl.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
