[package]
name = "queued"
description = "Fast zero-configuration single-binary simple queue service"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/queued"
readme = "README.md"
keywords = ["queue", "message", "fifo"]
categories = ["database-implementations", "web-programming"]
repository = "https://github.com/wilsonzlin/queued.git"
version = "0.6.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
alloc_jemalloc = ["dep:jemallocator"]

[dependencies]
axum = { version = "0.6", features = ["headers", "http2"] }
axum-msgpack = "0.3.0"
cadence = "0.29.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
jemallocator = { version = "0.3", optional = true }
libqueued = { version = "0.10.0", path = "../libqueued" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_prometheus = "0.2.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
