[package]
name = "queued"
description = "Fast zero-configuration single-binary simple queue service"
license = "SSPL-1.0"
homepage = "https://github.com/wilsonzlin/queued"
readme = "README.md"
keywords = ["queue", "message", "fifo"]
categories = ["database-implementations", "web-programming"]
repository = "https://github.com/wilsonzlin/queued.git"
version = "0.8.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
alloc_jemalloc = ["dep:jemallocator"]

[dependencies]
ahash = "0.8.11"
axum = { version = "0.6", features = ["headers", "http2"] }
axum-msgpack = "0.3.0"
cadence = "0.29.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5.3"
erased-serde = "0.4.4"
itertools = "0.12.1"
jemallocator = { version = "0.3", optional = true }
libqueued = { version = "0.12.0", path = "../libqueued" }
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_prometheus = "0.2.3"
service-toolkit = "0.3.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
