[package]
name = "queued"
version = "0.0.1"
edition = "2021"

[features]
default = ["fsync_delayed"]
alloc_jemalloc = ["jemallocator"]
fsync_delayed = []
fsync_immediate = []
unsafe_fsync_none = [] # For benchmarking purposes only!

[dependencies]
axum = { version = "0.6", features = ["headers"] }
blake3 = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
croaring = "0.7"
hex = "0.4"
itertools = "0.10"
jemallocator = { version = "0.3", optional = true }
lazy_static = "1.4"
num_enum = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
