[package]
name = "queued"
description = "Fast zero-configuration single-binary simple queue service"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/queued"
readme = "README.md"
keywords = ["queue", "message", "fifo"]
categories = ["database-implementations", "web-programming"]
repository = "https://github.com/wilsonzlin/queued.git"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["fsync_delayed", "io_mmap"]
alloc_jemalloc = ["dep:jemallocator"]
fsync_delayed = []
fsync_immediate = []
io_mmap = ["dep:memmap2"]
io_tokio_file = []
unsafe_fsync_none = [] # For benchmarking purposes only!

[dependencies]
axum = { version = "0.6", features = ["headers"] }
blake3 = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
croaring = "0.7"
hex = "0.4"
itertools = "0.10"
jemallocator = { version = "0.3", optional = true }
lazy_static = "1.4"
libc = "0.2"
memmap2 = { version = "0.5", optional = true }
num_enum = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
