[package]
name = "queued-stochastic-stresser"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = { version = "1.2.0", features = ["serde"] }
dashmap = "5.4.0"
itertools = "0.11.0"
libqueued = { version = "0.7.0", path = "../libqueued" }
off64 = "0.6.0"
rand = "0.8.5"
seekable-async-file = "0.11.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
stochastic-queue = "0.2.0"
tinybuf = "0.3.0"
tokio = { version = "1.29.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
