[package]
name = "queued-stochastic-stresser"
publish = false
version = "0.2.0"
edition = "2021"

[dependencies]
bytesize = { version = "1.2.0", features = ["serde"] }
dashmap = "5.4.0"
itertools = "0.11.0"
libqueued = { version = "0.13.0", path = "../libqueued" }
off64 = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
stochastic-queue = "0.2.0"
tokio = { version = "1.29.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
